--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zaowr_polsl_kisiel"
-version = "0.0.1"
+dynamic = ["version"]
 authors = [
-  { name="Maksymilian Kisiel", email="NONE" },
+  { name="Maksymilian Kisiel", email="NONE@NONE.PL" },
 ]
-description = "A small Python package used by me and a friend at the university in the course 'Advanced Image, Video and Motion Analysis'"
+description = "A simple Python package used by me and a friend at the university in the course 'Advanced Image, Video and Motion Analysis'"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -16,6 +16,10 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+keywords = ["polsl", "zaowr", "2024", "IGT", "ZAOWR"]
+
+[tool.setuptools.dynamic]
+dependencies = {file = "requirements.txt"}
 
 [project.urls]
 Homepage = "https://github.com/revalew/zaowr-py-package"
