Added building automations and tag feature (version 0.0.5)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zaowr_polsl_kisiel"
-dynamic = ["version"]
+dynamic = ["version", "dependencies"]
 authors = [
   { name="Maksymilian Kisiel" },
 ]
@@ -20,7 +20,7 @@ keywords = ["polsl", "zaowr", "2024", "IGT", "ZAOWR"]
 
 [tool.setuptools.dynamic]
 version = {attr = "zaowr_polsl_kisiel.__version__"}  # any module attribute compatible with ast.literal_eval
-dependencies = {file = "requirements.txt"}
+dependencies = {file = ["requirements.txt"]}
 
 [project.urls]
 Homepage = "https://github.com/revalew/zaowr-py-package"
