--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -41,7 +41,7 @@ jobs:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
 
-    if: startsWith(github.ref, 'refs/tags/') # only publish to PyPI on tag pushes
+    # if: startsWith(github.ref, 'refs/tags/') # only publish to PyPI on tag pushes
 
     needs:
       - build
