Changed the gh release flags for creating new releases (version 0.0.9)

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -99,8 +99,8 @@ jobs:
           gh release create
           '${{ github.ref_name }}'
           --repo '${{ github.repository }}'
-          --notes-from-tag
-        # --notes "Latest package release"
+          --notes "Latest package release ${{ github.ref_name }}"
+        #  --notes-from-tag
 
       - name: Upload artifact signatures to GitHub Release
         env:
