Massive rework in package structure -> now the code is devided into submodules; Each submodule, as well as the main module, has the docstrings; Fixed the print interfering with the progress bars; Updated dependencies; Modified the use cases; Added colored output in the terminal; Changed the GitHub Actions to include commit messages from previous tag release (standard commits) and the new tag commit - now the commits are part of the release notes; Added docstrings for loaders' param classes; Fixing the workflow (version 0.0.26)

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -128,16 +128,19 @@ jobs:
           
           # Process each commit
           while read -r commit; do
-            FORMATTED_COMMITS+="\n- commit ${COUNTER}:\n"
+            FORMATTED_COMMITS+=$'\n'"- commit ${COUNTER}:"
             IFS=';' read -ra SUBCOMMITS <<< "$commit"
             for subcommit in "${SUBCOMMITS[@]}"; do
-              FORMATTED_COMMITS+="  - ${subcommit}\n"
+              # Remove version pattern (e.g., "(version X.Y.Z)")
+              CLEANED_SUBCOMMIT=$(echo "$subcommit" | sed -E 's/\s*\(version [0-9]+\.[0-9]+\.[0-9]+\)//g')
+              FORMATTED_COMMITS+=$'\n'"  - ${CLEANED_SUBCOMMIT}"
             done
             ((COUNTER++))
           done <<< "$COMMITS"
 
-          echo "FORMATTED_COMMITS=$FORMATTED_COMMITS" >> $GITHUB_ENV
-          echo -e "$FORMATTED_COMMITS"
+          echo "FORMATTED_COMMITS<<EOF" >> $GITHUB_ENV
+          echo -e "$FORMATTED_COMMITS" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: Create GitHub Release
         env:
