--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-opencv-python>=4.10.0.84
-numpy>=2.1.3
-tqdm>=4.67.1
-colorama>=0.4.6
+opencv-python==4.10.0.84
+numpy==2.1.3
+tqdm==4.67.1
+colorama==0.4.6
+matplotlib==3.10.0
+scikit-image==0.25.0
