Fixing the dependencies for pdoc (ModuleNotFoundError: No module named 'numpy') - now we are installing the [dev] extras before generating the docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -45,6 +45,7 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           pip install --upgrade pip
+          pip install -e .[dev]
           pip install pdoc
         # already installed in [dev] but we only need pdoc as the package is provided explicitly as "src/zaowr_polsl_kisiel/"
         # pip install -e .[dev]
