Fixing the CI/CD Workflows (GitHub Actions for pdoc and pytest) - test (version 0.0.28)

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,8 +2,10 @@ name: Test package using pytest
 
 on:
   push:
-    branches:
-      - master
+#    branches:
+#      - master
+    tags:
+      - '*' # Push events to every tag not containing /
   pull_request:
     branches:
       - master
