Modified the prints in functions; Added the f-string formatting guide; Modified the usage instructions for performance measuring decorator (adding brackets is required); Modified the workflow to list the commits in reverse order (oldest at the bottom of the release); Fixed the lab3 solution; Added the rectified images; Added the dataset to calculate the disparity map; Updated the position parameter in progressbar (tqdm) and now it works with multiple progress bars at the same time (at least it should); Removed the prints in custom block matching (the console was cluttered with new best SSD matches...); Updated the docstrings for the plotting function; Added the option to customize the plot title and subtitles (version 0.0.29)

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -118,7 +118,7 @@ jobs:
           echo "PREVIOUS_TAG=$PREVIOUS_TAG" >> $GITHUB_ENV
           
           # Fetch commit messages only, excluding commit IDs
-          COMMITS=$(git log $PREVIOUS_TAG..HEAD --pretty=format:"%s")
+          COMMITS=$(git log $PREVIOUS_TAG..HEAD --pretty=format:"%s" --reverse)
           echo "Commit messages between $PREVIOUS_TAG and current tag:"
           echo "$COMMITS"
           
