Fixed the typo in calibration loading function; Tested the build (added results to the repo); Added print statements to indicate what the program is doing at the moment; Added newlines for readability; Changed the minDepth check in depth to disparity conversion (now also accepts 0.0); Updated the docstrings; Fixed the function display_img_plt; Added option to change the cmap in said function; Also added code to save the image RAW (with cv2.imwrite); Updated the lab4 solution; Added colors to measure_perf decorator and added condition to create directory for the save file if it doesn't exist; Updated the package description; Updated the USAGE; Checkin' things off my to-do list :musical_note: (version 0.0.31)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,18 +9,18 @@ dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
 authors = [
   { name="Maksymilian Kisiel" },
 ]
-description = "A simple Python package used by me and a friend at the university in the course 'Advanced Image, Video and Motion Analysis'"
+description = "A simple Python package used by me and my friends at university in the 'Advanced Image, Video and Motion Analysis' course."
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-keywords = ["polsl", "zaowr", "2024", "IGT", "ZAOWR"]
+keywords = ["polsl", "zaowr", "2024/2025", "IGT", "ZAOWR"]
 
 [tool.setuptools.dynamic]
 version = {attr = "zaowr_polsl_kisiel.__version__"}  # any module attribute compatible with ast.literal_eval
-readme = {file = ["README.md", "./docs/WINDOWS.md", "./docs/USAGE.md"], content-type = "text/markdown"}
+readme = {file = ["README.md", "./docs/USAGE.md"], content-type = "text/markdown"}
 dependencies = {file = ["requirements.txt"]}
 optional-dependencies.dev = {file = ["dev-requirements.txt"]}
 
